--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ multidict==6.0.4
 outcome==1.2.0
 packaging==23.0
 Pillow==9.3.0
+psycopg2-binary==2.9.5
 PySocks==1.7.1
 python-dotenv==0.21.0
 requests==2.28.2
