--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,8 @@ services:
   flask:
     build: .
     command: python -m flask run
-    environment:
-      - FLASK_APP=app.py
-      - FLASK_ENV=development
-      - FLASK_DEBUG=1
-      - FLASK_RUN_HOST=0.0.0.0
-      - FLASK_RUN_PORT=5000
+    env_file:
+      - .env
     volumes:
       - .:/usr/src/app
     ports:
