--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
+environs==9.5.0
 exceptiongroup==1.1.0
 Flask==2.2.2
 Flask-Admin==1.6.0
@@ -18,6 +19,7 @@ Jinja2==3.1.2
 loguru==0.6.0
 Mako==1.2.4
 MarkupSafe==2.1.1
+marshmallow==3.19.0
 multidict==6.0.4
 outcome==1.2.0
 packaging==23.0
